Style: Remove large line height on top-level title to avoid double-spacing

--- a/pep_sphinx_extensions/pep_theme/static/style.css
+++ b/pep_sphinx_extensions/pep_theme/static/style.css
@@ -41,7 +41,6 @@ p {margin: .5rem 0}
 
 /* Header rules */
 h1 {
-    line-height: 2.3;
     font-size: 2rem;
     font-weight: bold;
     margin-top: 2rem;
